--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,11 @@
         }
     ],
     "require": {
+        "php": "^7.1",
         "laravel/framework": ">=5.6.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "psr-4": {
